Fixed service startup
Added actor picker
