# src/StoryBooks.Models/Character.cs
@@ -2,10 +2,6 @@ namespace StoryBooks.Models
 {
     public class Character : AbstractActor
     {
-        public string Firstname { get; set; } = string.Empty;
 
-        public string Lastname { get; set; } = string.Empty;
-        
-        public override string Name => $"{Firstname} {Lastname}";
     }
 }
